# cotel

./: .gitignore  AI_AGENT_GUIDE.md  AI_INTEGRATION.md  AI_QUICKSTART.md  ARCHITECTURE.md  CHANGELOG.md  INSTALLATION.md  MULTI_LANG_DEMO.md  PROMPT_TEMPLATES.md  QUICKSTART.md  README.md  SYSTEM_WIDE_USAGE.md  TESTING_GUIDE.md  app.py  package.json  prd.md  pyproject.toml  skills-lock.json  utils.py
.agents/: AGENT_INTEGRATION.md  TESTING_AGENTS.md
.agents/hooks/: README.md  auto-index.sh
.agents/skills/repo-intel/: SKILL.md
demo-repo/: main.py
docs/plans/: 2025-03-05-repomap-design.md  2025-03-05-repomap-implementation.md  2026-03-01-project-foundation.md  2026-03-01-repo-intel-python.md
src/repo_intel/: cli.py
src/repo_intel/core/: config.py  constants.py  context_detector.py  indexer.py  pagerank.py  repomap_generator.py  storage.py  token_optimizer.py
src/repo_intel/formatters/: toon_formatter.py
src/repo_intel/parsers/: base.py  factory.py  go_parser.py  (+5 more)
tests/: test_call_graph.py  test_cli.py  test_config.py  test_context_detector.py  test_e2e.py  test_e2e_repomap.py  test_file_walker.py  test_find_symbol.py  test_go_parser.py  test_hashing.py  test_indexer.py  test_java_parser.py  test_javascript_parser.py  test_language_detector.py  test_lazy_indexing.py  test_list_symbols.py  test_pagerank.py  test_parser_base.py  test_parser_factory.py  test_php_parser.py  test_python_parser.py  test_repomap_generator.py  test_rust_parser.py  test_storage.py  test_token_optimizer.py  test_toon_formatter.py  test_watch.py
tests/benchmarks/: test_indexing.py
(+8 files in other folders)
